// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render a Menu with an add option 1`] = `
<div
  className="menu"
  id="terra-select-menu"
  role="listbox"
>
  <AddOption
    data-select-active={true}
    id="terra-select-option-Tag"
    isActive={true}
    isCheckable={true}
    isSelected={false}
    key=".0"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseUp={[Function]}
    value="Tag"
  />
</div>
`;

exports[`Menu should render a Menu with no results 1`] = `
<div
  className="menu"
  id="terra-select-menu"
  role="listbox"
>
  <NoResults
    key=".0"
  />
</div>
`;

exports[`Menu should render a default Menu 1`] = `
<div
  className="menu"
  id="terra-select-menu"
  role="listbox"
>
  <NoResults
    key=".0"
  />
</div>
`;
